Title changes per template

--- a/movie_review/apps/movie_review_app/templates/movie_review_app/new.html
+++ b/movie_review/apps/movie_review_app/templates/movie_review_app/new.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Movie Reviews</title>
+    <title>Movie Reviews new</title>
     <link rel="stylesheet" href="{% static 'main.css' %}">
   </head>
   <body>
