--- a/movie_review/apps/movie_review_app/templates/movie_review_app/show_user.html
+++ b/movie_review/apps/movie_review_app/templates/movie_review_app/show_user.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Movie Reviews</title>
+    <title>Movie Reviews show_user</title>
     <link rel="stylesheet" href="{% static 'main.css' %}">
   </head>
   <body>
